traefik.new/02-traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: traefik-deployment
 labels:
   app: traefik
 namespace: ${TRAEFIK_NAMESPACE}
spec:
 replicas: 1
 selector:
   matchLabels:
     app: traefik
 template:
   metadata:
     labels:
       app: traefik
   spec:
     serviceAccountName: traefik-account
     containers:
       - name: traefik
         image: traefik:v3.1
         args:
           - --api.insecure
           - --providers.kubernetesingress
         ports:
           - name: web
             containerPort: 80
             hostPort: 80
           - name: dashboard
             containerPort: 8080
             hostPort: 8080
     nodeSelector:
       ingress-ready: "true"
     tolerations:
       - key: "node-role.kubernetes.io/control-plane"
         operator: "Equal"
         effect: "NoSchedule"
       - key: "node-role.kubernetes.io/master"
         operator: "Equal"
         effect: "NoSchedule"
