traefik.new/02-traefik-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: ${TRAEFIK_NAMESPACE}
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: ${TRAEFIK_NAMESPACE}
spec:
  type: NodePort
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
