traefik.new/03-whoami-services.yml
apiVersion: v1
kind: Service
metadata:
 name: whoami
spec:
 ports:
   - name: web
     port: 80
     targetPort: web
 selector:
   app: whoami
