traefik.new/04-whoami-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: whoami-ingress
spec:
 rules:
 - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: whoami
           port:
             name: web
